# spotui-hiby-r3proii

./: .gitignore  AGENTS.md  DISCLAIMER.md  LICENSE  README.md  SECURITY.md  SUPPORT.md  THIRD_PARTY.md
apps/spotify/daemon/: spotui_daemon.rs
docs/: build.md  developer-install.md  firmware-build.md  recovery.md  roadmap.md
engine/firmware/: S98adbon  S99spotui
engine/launcher/: start_spotui.sh  start_spotui_wrapper.sh
engine/ui/: Cargo.toml
engine/ui/.cargo/: config.toml
engine/ui/src/: main.rs
tools/firmware/: build_spotui_branded_upt.sh
